@@ -64,6 +64,7 @@ normignall.svx normignall.pos\
 nosurv.svx nosurv.pos nosurv.out\
 cmd_flags.svx bad_cmd_flags.svx\
 plumb.svx plumb.pos\
+cmd_begin_bad.svx cmd_begin_bad.out\
 cmd_fix_bad.svx cmd_fix_bad.out\
 cmd_sd.svx cmd_sd_bad.svx cmd_sd_bad.out\
 cmd_set.svx cmd_set.pos\
