@@ -42,6 +42,7 @@ testdir=`(cd "$testdir" && pwd)`
  cmd_set_bad beginroot revcomplist break_replace_pfx bug0 bug1 bug2 bug4 bug5\
  expobug require export export2 includecomment\
  self_loop self_eq_loop reenterwarn cmd_default cmd_prefix cmd_prefix_bad\
+ cmd_begin_bad\
  singlefixerr singlereffixerr\
  begin_no_end end_no_begin end_no_begin_nest require_fail\
  exporterr1 exporterr2 exporterr3 exporterr4 exporterr5\
